# nixos-multi-host

./: .gitignore  .sops.yaml  CLAUDE.md  HOME_MANAGER_RESTRUCTURE_PLAN.md  IMMICH_DISTRIBUTED_PROCESSING_PLAN.md  README.md  SOULARR.ini  arr-perms-fix.nix  configuration.nix  debug-file-picker.sh  final-test.txt  flake.nix  hardware-configuration.nix  home.nix  hwc.ocelot-wahoo.ts.net.crt  hwc.ocelot-wahoo.ts.net.key  hyprland.nix  immich-worker-config.nix  iso-server-rescue.nix  modules.nix  result  server-improvements-log.md  slskd-verify.sh  sops-test.txt  test-ai-completion.txt  test-ai-docs.txt
.claude/: HOME_MANAGER_RESTRUCTURE_PLAN.md  REFACTORING_SUMMARY.md  aliases.md  claude-md-template.md  nixos-health-check.md  settings.local.json
backup/: config_backup.nix  configuration.nix  configuration.nix.backup  configuration_backup.nix  startup.sh
bible-plan/: AI_BIBLE_SYSTEM_COMPLETED_DELIVERABLES.md  AI_BIBLE_SYSTEM_IMPLEMENTATION_PLAN.md  AI_DOCUMENTATION_IMPLEMENTATION_PROGRESS.md  BIBLE_TEMPLATE.md
config/: bible_categories.yaml  bible_system_config.yaml
docs/: AI_BIBLE_SYSTEM_ARCHITECTURE.md  AI_DOCUMENTATION_IMPLEMENTATION_PLAN.md  AI_DOCUMENTATION_SYSTEM_HOWTO.md  ARR_APPS_OPTIMIZATION_GUIDE.md  BATCH_CONTROLLER_IMPLEMENTATION_PROGRESS.md  CLAUDE_CODE_SYSTEM_PRIMER.md  COMPLETED_TASKS_LOG.md  ENHANCED_TRANSCRIPT_FORMATTER_DOCUMENTATION.md  FRIGATE_OPTIMIZATION_GUIDE.md  GPU_ACCELERATION_GUIDE.md  GRAFANA_PROMETHEUS_USER_GUIDE.md  GREBUILD_AND_CADDY_FIXES_2025-08-06.md  GREBUILD_AND_CADDY_URL_FIXES.md  (+18 more)
projects/hwc-transcripts/: pyproject.toml
(+254 files in other folders)
