# pyproject.toml
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hwc-transcripts"
version = "0.1.0"
description = "YouTube transcript extraction (CLI + API) for NixOS homeserver"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "HWC", email = "eric@iheartwoodcraft.com"}]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "yt-dlp>=2025.1.1",
  "youtube-transcript-api>=0.6.2",
  "httpx>=0.27",
  "aiofiles>=23.2.1",
  "prometheus-client>=0.20.0",
  "python-slugify>=8.0.4",
  "orjson>=3.10.7",
  "typing-extensions>=4.12.2"
]

[project.scripts]
yt-transcript = "app.cli:main"